--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,20 @@
-{% include head.html %}
+<!DOCTYPE html>
+<html>
 
-<h1>{{ page.title }}</h1>
+  {% include head.html %}
 
-{{ content }}
-{% include nav.html %}
+  <body>
 
-{% include foot.html %}	
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
