--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,18 +2,19 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+ <!--  <h2 class="footer-heading">{{ site.title }}</h2>   -->
+<p><a href="http://jixizh.github.io">{{ site.name }}</a></p>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+   <!--       <li>{{ site.title }}</li>    -->
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
-        <ul class="social-media-list">
+ <!--       <ul class="social-media-list">
           {% if site.github_username %}
           <li>
             <a href="https://github.com/{{ site.github_username }}">
@@ -42,11 +43,11 @@
             </a>
           </li>
           {% endif %}
-        </ul>
+        </ul>         -->
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+ <!--       <p class="text">{{ site.description }}</p>    -->
       </div>
     </div>
 
