--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   </header>
 
   <article class="post-content">
-   {{ content }} 
+   <h3> {{ content }} </h3>
   </article>
 
 </div>
